responsives fixes added favion and links in footer

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
@@ -23,6 +24,10 @@
     <link rel="stylesheet" href="/css/style.css" />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@200..700&display=swap"
     />
     <title>Contact | Maged Abdulaziz</title>
@@ -31,28 +36,46 @@
       content="Contact Maged Abdulaziz for modern, interactive web design and frontend development projects."
     />
     <meta name="author" content="Maged Abdulaziz" />
-    <link rel="canonical" href="https://www.magedabdulaziz.com/pages/contact-us.html" />
+    <link
+      rel="canonical"
+      href="https://www.magedabdulaziz.com/pages/contact-us.html"
+    />
     <meta property="og:title" content="Contact | Maged Abdulaziz" />
     <meta
       property="og:description"
       content="Reach out to Maged Abdulaziz for web development, motion, and interactive experiences."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.magedabdulaziz.com/pages/contact-us.html" />
-    <meta property="og:image" content="https://www.magedabdulaziz.com/images/me/purple-two.jpeg" />
+    <meta
+      property="og:url"
+      content="https://www.magedabdulaziz.com/pages/contact-us.html"
+    />
+    <meta
+      property="og:image"
+      content="https://www.magedabdulaziz.com/images/me/purple-two.jpeg"
+    />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Contact | Maged Abdulaziz" />
     <meta
       name="twitter:description"
       content="Reach out to Maged Abdulaziz for web development, motion, and interactive experiences."
     />
-    <meta name="twitter:image" content="https://www.magedabdulaziz.com/images/me/purple-two.jpeg" />
+    <meta
+      name="twitter:image"
+      content="https://www.magedabdulaziz.com/images/me/purple-two.jpeg"
+    />
   </head>
   <body data-page="contact" class="contact-page">
     <div id="app">
       <nav>
         <div class="menu-bar">
-          <a href="/index.html" class="nav-logo" id="logo" aria-label="Maged Abdulaziz home">MAGED</a>
+          <a
+            href="/index.html"
+            class="nav-logo"
+            id="logo"
+            aria-label="Maged Abdulaziz home"
+            >MAGED</a
+          >
 
           <div class="menu-toggle-btn">
             <div class="menu-toggle-label">
@@ -294,16 +317,51 @@
           <div class="footer-mid">
             <p>© 2025 Maged Abdulaziz. All rights reserved.</p>
             <div class="footer-links">
-              <a href="#">About</a>
-              <a href="#">Projects</a>
-              <a href="#">Contact</a>
+              <a href="/pages/about-page.html">About</a>
+              <a href="/pages/project-page.html">Projects</a>
+              <a href="/pages/contact-us.html">Contact</a>
             </div>
             <div class="socials">
-              <a href="#">Be</a>
-              <a href="#">🤍</a>
-              <a href="#">in</a>
-              <a href="#">🤍</a>
-              <a href="#">in</a>
+              <a
+                href="https://www.facebook.com/maged.abdulaziz.54"
+                target="_blank"
+                rel="noopener"
+                aria-label="Facebook"
+              >
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a
+                href="https://www.instagram.com/magedabdulaziz/"
+                target="_blank"
+                rel="noopener"
+                aria-label="Instagram"
+              >
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+              <a
+                href="https://www.tiktok.com/@usr999__"
+                target="_blank"
+                rel="noopener"
+                aria-label="TikTok"
+              >
+                <i class="fa-brands fa-tiktok"></i>
+              </a>
+              <a
+                href="https://www.linkedin.com/in/maged-abdulaziz-621782229/"
+                target="_blank"
+                rel="noopener"
+                aria-label="LinkedIn"
+              >
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a
+                href="https://github.com/maged21"
+                target="_blank"
+                rel="noopener"
+                aria-label="GitHub"
+              >
+                <i class="fa-brands fa-github"></i>
+              </a>
             </div>
           </div>
 
