--- a/pages/about-page.html
+++ b/pages/about-page.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
@@ -21,6 +22,10 @@
       />
     </noscript>
     <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@200..700&display=swap"
@@ -86,7 +91,7 @@
           <div class="menu-overlay-content">
             <div class="menu-media-wrapper">
               <!-- <img src="/images/hero4.jpg" /> -->
-              <video src="/videos/nav-video.mp4" autoplay muted loop></video>
+              <video src="/videos/navVideo.mp4" autoplay muted loop></video>
             </div>
             <div class="menu-content-wrapper">
               <div class="menu-content-main">
@@ -134,7 +139,6 @@
 
           <span class="scroll-down" aria-label="Scroll down">
             <div class="mouse"><span></span></div>
-            <div class="arrow"><span></span><span></span></div>
           </span>
 
           <div class="hero-copy">
@@ -625,16 +629,51 @@
           <div class="footer-mid">
             <p>© 2025 Maged Abdulaziz. All rights reserved.</p>
             <div class="footer-links">
-              <a href="#">About</a>
-              <a href="#">Projects</a>
-              <a href="#">Contact</a>
+              <a href="/pages/about-page.html">About</a>
+              <a href="/pages/project-page.html">Projects</a>
+              <a href="/pages/contact-us.html">Contact</a>
             </div>
             <div class="socials">
-              <a href="#">Be</a>
-              <a href="#">🤍</a>
-              <a href="#">in</a>
-              <a href="#">🤍</a>
-              <a href="#">in</a>
+              <a
+                href="https://www.facebook.com/maged.abdulaziz.54"
+                target="_blank"
+                rel="noopener"
+                aria-label="Facebook"
+              >
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a
+                href="https://www.instagram.com/magedabdulaziz/"
+                target="_blank"
+                rel="noopener"
+                aria-label="Instagram"
+              >
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+              <a
+                href="https://www.tiktok.com/@usr999__"
+                target="_blank"
+                rel="noopener"
+                aria-label="TikTok"
+              >
+                <i class="fa-brands fa-tiktok"></i>
+              </a>
+              <a
+                href="https://www.linkedin.com/in/maged-abdulaziz-621782229/"
+                target="_blank"
+                rel="noopener"
+                aria-label="LinkedIn"
+              >
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a
+                href="https://github.com/maged21"
+                target="_blank"
+                rel="noopener"
+                aria-label="GitHub"
+              >
+                <i class="fa-brands fa-github"></i>
+              </a>
             </div>
           </div>
 
