--- a/pages/project-page.html
+++ b/pages/project-page.html
@@ -56,7 +56,7 @@
             <div class="menu-overlay-content">
               <div class="menu-media-wrapper">
                 <!-- <img src="/images/hero4.jpg" /> -->
-                <video src="/videos/nav-video.mp4" autoplay muted loop></video>
+                 <video src="/videos/navVideo.mp4" autoplay muted loop></video>
               </div>
               <div class="menu-content-wrapper">
                 <div class="menu-content-main">
