--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
           <section class="work">
             <div class="row">
               <div class="work-item item" id="item-1">
-                <a href="#" class="work-item-link">
+                <a href="https://www.arlation.com/" target="_blank" class="work-item-link">
                   <div class="work-item-img item-img">
                     <img
                       loading="lazy"
@@ -672,7 +672,7 @@
                         <div class="shape">
                           <div id="number"><span>0</span><span>1</span></div>
                           <div class="text-right">
-                            <span>gsap</span>
+                            <span>html pages</span>
                           </div>
                         </div>
                       </div>
@@ -680,12 +680,12 @@
                       <div class="item-copy-2">
                         <div class="shape">
                           <div>
-                            <span>r</span><span>e</span><span>a</span
-                            ><span>c</span><span>t</span>
+                            <span>L</span><span>o</span><span>c</span
+                            ><span>a</span><span>l</span><span>i</span><span>z</span><span>a</span><span>t</span><span>i</span><span>o</span><span>n</span>
                           </div>
                           <div class="text-right">
-                            <span>v</span><span>e</span><span>r</span
-                            ><span>c</span><span>e</span><span>l</span>
+                            <span>g</span><span>a</span><span>m</span
+                            ><span>e</span><span>s</span>
                           </div>
                         </div>
                       </div>
@@ -696,7 +696,7 @@
               </div>
 
               <div class="work-item item" id="item-2">
-                <a href="#" class="work-item-link">
+                <a href="https://3d-character.vercel.app/" target="_blank" class="work-item-link">
                   <div class="work-item-img item-img">
                     <img
                       loading="lazy"
@@ -708,10 +708,10 @@
                     <div class="item-copy">
                       <div class="item-copy-1">
                         <div class="shape">
-                          <div id="number"><span>0</span><span>1</span></div>
+                          <div id="number"><span>0</span><span>2</span></div>
                           <div class="text-right">
-                            <span>g</span><span>s</span><span>a</span
-                            ><span>p</span>
+                            <span>a</span><span>n</span><span>i</span
+                            ><span>m</span><span>e</span>
                           </div>
                         </div>
                       </div>
@@ -723,8 +723,8 @@
                             ><span>c</span><span>t</span>
                           </div>
                           <div class="text-right">
-                            <span>v</span><span>e</span><span>r</span
-                            ><span>c</span><span>e</span><span>l</span>
+                            <span>g</span><span>s</span><span>a</span
+                            ><span>p</span>
                           </div>
                         </div>
                       </div>
@@ -734,7 +734,7 @@
                 </a>
               </div>
               <div class="work-item item" id="item-3">
-                <a href="#" class="work-item-link">
+                <a href="https://magedabdulaziz-travel.vercel.app/" target="_blank" class="work-item-link">
                   <div class="work-item-img item-img">
                     <img
                       loading="lazy"
@@ -746,7 +746,7 @@
                     <div class="item-copy">
                       <div class="item-copy-1">
                         <div class="shape">
-                          <div id="number"><span>0</span><span>1</span></div>
+                          <div id="number"><span>0</span><span>3</span></div>
                           <div class="text-right">
                             <span>gsap</span>
                           </div>
@@ -759,10 +759,7 @@
                             <span>r</span><span>e</span><span>a</span
                             ><span>c</span><span>t</span>
                           </div>
-                          <div class="text-right">
-                            <span>v</span><span>e</span><span>r</span
-                            ><span>c</span><span>e</span><span>l</span>
-                          </div>
+
                         </div>
                       </div>
                     </div>
@@ -772,7 +769,7 @@
               </div>
 
               <div class="work-item item" id="item-4">
-                <a href="#" class="work-item-link">
+                <a href="https://megz-nike-store.vercel.app/" target="_blank" class="work-item-link">
                   <div class="work-item-img item-img">
                     <img
                       loading="lazy"
@@ -784,7 +781,7 @@
                     <div class="item-copy">
                       <div class="item-copy-1">
                         <div class="shape">
-                          <div id="number"><span>0</span><span>1</span></div>
+                          <div id="number"><span>0</span><span>4</span></div>
                           <div class="text-right">
                             <span>g</span><span>s</span><span>a</span
                             ><span>p</span>
@@ -798,10 +795,7 @@
                             <span>r</span><span>e</span><span>a</span
                             ><span>c</span><span>t</span>
                           </div>
-                          <div class="text-right">
-                            <span>v</span><span>e</span><span>r</span
-                            ><span>c</span><span>e</span><span>l</span>
-                          </div>
+            
                         </div>
                       </div>
                     </div>
